  conditions in the PyOS_vsnprintf C API function.

- Issue #1204: The configure script now tests for additional libraries
  that may be required when linking against readline.  This fixes issues
  with x86_64 builds on some platforms (a few Linux flavors and OpenBSD).

- Issue #3678: Correctly pass LDFLAGS and LDLAST to the linker on shared
  library targets in the Makefile.

Library
-------

- Assigning methods to ctypes.Structure and ctypes.Union subclasses
  after creation of the class does now work correctly.  See Issue #1700288.

- Issue #3895: _lsprof could be crashed with an external timer that did not
  return a float when a Profiler object is garbage collected.

- Issues #3968 and #3969: two minor turtle problems.

- Issue #3547: Fixed ctypes structures bitfields of varying integer
  sizes.

- Issue #3762: platform.architecture() fails if python is lanched via
  its symbolic link.

- Issue #3554: ctypes.string_at and ctypes.wstring_at did call Python
  api functions without holding the GIL, which could lead to a fatal
  error when they failed.

- Issue #2234: distutils failed for some versions of the cygwin compiler. The
  version reported by these tools does not necessarily follow the python
  version numbering scheme, so the module is less strict when parsing it.

- Issue #2222: Fixed reference leak when occured os.rename()
  fails unicode conversion on 2nd parameter. (windows only)

- Issue #3134: shutil referenced undefined WindowsError symbol.

- Issue #1342811: Fix leak in Tkinter.Menu.delete. Commands associated to
  menu entries were not deleted.

- Issue #799428: Fix Tkinter.Misc._nametowidget to unwrap Tcl command objects.

- Issue #3339: dummy_thread.acquire() could return None which is not a valid
  return value.

- Issue #3116 and #1792:  Fix quadratic behavior in marshal.dumps().

- Issue #2682: ctypes callback functions no longer contain a cyclic
  reference to themselves.
